# Noel

./: .clangd  .gitignore  CMakeLists.txt  README.md  debug.bat  debug.sh  setup.ps1  setup.sh  xmake.lua
.github/: dependabot.yml
scripts/: default.lua
src/: main.cpp
src/cli/: cli.cpp  cli.h
src/engine/: gwindow.cpp  gwindow.h
